# portfolio

./: .dockerignore  .editorconfig  .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  index.html  package-lock.json  package.json  tailwind.config.js
.github/: cd.yml  ci.yaml  ci.yml
.sqlx/: query-0d8ac89da06298f885fca44c22a6b6eb13680b9333c6f2cef3f6aa99eb3710a8.json  query-139a2fd799298d7b5677a289cb38c654a8217393f50c1347f2bf58b8c4f4f1f5.json  query-13c369b21126bb73725aac16bc348713f6da84371e378b4880caa65f6da36f1f.json  query-7f118043c7fd97acd3a2ff0229fdb5689c1a00b682e3ed3fab8b0d9b3c1a85be.json  query-825c8a166918ed6471b1e22f5b4009acb461e1eddbf77db2c977591068c32244.json  query-8cbc1302ade06f39b07fd92a3c2d3b62f0006f21c135eb765f59282697c64a9c.json  query-b9d48aa8c5a5ce8c0de246f135729005be856fabbc0bdc0bedee63cdadac4ab6.json  query-de5fc5f90fce5d69aa942ca250122cf3923f134648f02b9e5fecb7818976d652.json  query-e17af1399bf64eb0b622354cf97f5eece96563eabd80828038cc4aa21bd6c0f1.json
css/: style.css
data/: projects.toml
examples/: echo_client.rs
migrations/: 20250630174718_create_messages_table.sql  20250630182203_create_messages_table.sql
src/: main.rs  temp.rs
src/routes/: home.rs
static/css/: about.css  blog.css  blog_detail.css  contact.css  home.css  index.css  output.css  projects.css  style.css
static/js/: post.js  random_content.js  term_rand.js  terminal.js
templates/: about.html  admin.html  blog.html  blog_detail.html  contact.html  contact.html.tera  home.html  index.html  index.html.tera  projects.html
