[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
askama = "0.14.0"
dotenvy = "0.15.7"
lettre = "0.11.17"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-native-tls = "0.3.1"
